# django-dataexporter

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  test.yaml
django_dataexporter/: __init__.py  admin.py  base.py  csv.py  excel.py
django_exporter/: __init__.py  admin.py  base.py  csv.py  excel.py  exporter.py
docs/: Makefile  conf.py  installation.rst  requirements.txt  usage.rst
docs/api/: django_exporter.exporter.rst  django_exporter.rst  modules.rst
tests/: settings.py  test_admin.py  test_base.py  test_csv.py  test_excel.py  test_exporter.py
tests/mockapp/: models.py
