[project]
name = "django-dataexporter"
version = "2.0.0"
description = "Extensible helper to export Django QuerySets and other data to CSV and Excel."
authors = [
	{name = "Stephan Jaekel", email = "steph@rdev.info"},
	{name = "Magdalena Rother", email = "rother.magdalena@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.10,<4"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]

dependencies = [
	"Django>=3.2",
	"openpyxl>=2.6",
]

[project.optional-dependencies]
docs = ["Sphinx>=3.5"]
dev = [
	"pytest>=6.2",
	"pytest-cov>=2.11",
	"pytest-django>=4.2",
	"pytest-snapshot>=0.6",
	"coverage[toml]>=5.5",
	"ruff>=0.8",
	"tox>=4.0",
	"tox-uv>=1.0",
]

[project.urls]
Homepage = "https://github.com/lenarother/django-dataexporter"
Repository = "https://github.com/lenarother/django-dataexporter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_dataexporter"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --nomigrations"
testpaths = ["django_dataexporter", "tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.ruff.lint]
select = [
	"E",  # pycodestyle errors
	"W",  # pycodestyle warnings
	"F",  # pyflakes
	"I",  # isort
	"C90",  # mccabe complexity
]
ignore = [
	"E203",  # whitespace before ':'
	"E266",  # too many leading '#' for block comment
	"E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["django_dataexporter"]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = false
exclude = ["tests/settings.py"]

[tool.coverage.run]
branch = true
source = ["django_dataexporter"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
