[project]
name = "django-dataexporter"
version = "2.0.0"
description = "Extensible helper to export Django QuerySets and other data to CSV and Excel."
authors = [
	{name = "Stephan Jaekel", email = "steph@rdev.info"},
	{name = "Magdalena Rother", email = "rother.magdalena@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.10,<4"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]

dependencies = [
	"Django>=3.2",
	"openpyxl>=2.6",
]

[project.optional-dependencies]
docs = ["Sphinx>=3.5"]
dev = [
	"pytest>=6.2",
	"pytest-cov>=2.11",
	"pytest-django>=4.2",
	"pytest-flake8>=1.0",
	"pytest-isort>=2.0",
	"pytest-black>=0.3",
	"pytest-snapshot>=0.6",
	"coverage[toml]>=5.5",
	"tox>=4.0",
	"tox-uv>=1.0",
]

[project.urls]
Homepage = "https://github.com/lenarother/django-dataexporter"
Repository = "https://github.com/lenarother/django-dataexporter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_dataexporter"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --nomigrations"
testpaths = ["django_dataexporter", "tests"]
flake8-max-line-length = 96
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = "\\.pyi?$"
exclude = "/(\\.git|\\.tox|build|dist)/"

[tool.coverage.run]
branch = true
source = ["django_dataexporter"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]
